--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ngovictor20/maplestorychecklist",
+  "homepage": "https://ngovictor20.github.io/maplestorychecklist",
   "name": "maplestory-checklist",
   "version": "0.1.0",
   "private": true,
