--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "date-fns": "^2.18.0",
+    "date-fns-tz": "^1.1.3",
     "eslint": "^7.20.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -59,6 +61,7 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/parser": "^4.15.2",
     "autoprefixer": "^9.8.6",
+    "eslint-plugin-you-dont-need-momentjs": "^1.6.0",
     "gh-pages": "^3.1.0",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
