--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.19.0",
     "date-fns-tz": "^1.1.3",
     "eslint": "^7.20.0",
+    "luxon": "^1.26.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
