--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.1",
     "date-fns": "^2.19.0",
     "date-fns-tz": "^1.1.3",
+    "deep-freeze": "0.0.1",
     "eslint": "^7.20.0",
     "luxon": "^1.26.0",
     "react": "^17.0.1",
@@ -56,7 +57,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.3",
+    "@types/deep-freeze": "^0.1.2",
     "@types/lodash": "^4.14.168",
+    "@types/luxon": "^1.26.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
